--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <script type="text/javascript" src="js/jquery-ui.min.js"></script>
         <script type="text/javascript" src="jqwidgets/jqxcore.js"></script>
         <script type="text/javascript" src="jqwidgets/jqxmenu.js"></script>
+        <script type='text/javascript' src="js/requests.js"></script>
         <script type="text/javascript">
             $(function() {
                 var wrapper_h = $("#wrapper").css("height").split("px")[0];
