--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             $(function() {
                 var wrapper_h = $("#wrapper").css("height").split("px")[0];
 		var editor = ace.edit("editor");
-                $("#openProjectsDialog").dialog({autoOpen: false, modal: true, width: 300});
+                $("#openProjectDialog").dialog({autoOpen: false, modal: true, width: 300});
 				 
                 function apply() {
 
