--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ and open the template in the editor.
                 readOnly: true // false if this command should not apply in readOnly mode
             });
             </script>
-            <div id="openProjectDialog">
+            <div id="openProjectDialog" title="Open project">
                 <ul style="list-style-type: none;">
                     
                 </ul>
