--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ and open the template in the editor.
             });
             </script>
             <div id="openProjectDialog" title="Open projects">
-                <ul style="list-style-type: none;">
+                <ul id="openProjectList" style="list-style-type: none;">
                     
                 </ul>
             </div>
