--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ and open the template in the editor.
             $(function() {
                 var wrapper_h = $("#wrapper").css("height").split("px")[0];
 		var editor = ace.edit("editor");
-                $("#tree").jstree();
+                //$("#tree").jstree();
                 $("#openProjectDialog").dialog({autoOpen: false, 
                                                 modal: true, 
                                                 width: 300, 
@@ -243,12 +243,6 @@ and open the template in the editor.
                 <div id="links">
                     <div id="tree">
                         <ul>
-                            <li>Root
-                                <ul>
-                                    <li>Child</li>
-                                    <li>Child</li>
-                                </ul>
-                            </li>
                         </ul>
                     </div>
                 </div>
