--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ and open the template in the editor.
                 });
                 
                 $("#leftAnimation").click(function() {
-                    if($("#left").width() > 50) {
-                        $("#left").animate({
+                    if($("#links").width() > 50) {
+                        $("#links").animate({
                             width: 250
                         }, 500);
                     } else {
-                        $("#left").animate({
+                        $("#links").animate({
                             width: 50
                         }, 500);
                     }
