--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ and open the template in the editor.
                 });
                 
                 $("#leftAnimation").click(function() {
+                    console.log("klickibunti");
                     if($("#links").width() > 50) {
                         $("#links").animate({
                             width: 250
