--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ and open the template in the editor.
                 
                 $("#leftAnimation").click(function() {
                     console.log("klickibunti");
-                    if($("#links").width() > 50) {
+                    if($("#links").width() >= 50) {
                         $("#links").animate({
                             width: 250
                         }, 500);
