--- a/index.html
+++ b/index.html
@@ -136,8 +136,14 @@ and open the template in the editor.
                         $("#links").animate({
                             width: 50
                         }, 500);
+                        $(this).animate({
+                            width: 50
+                        }, 500);
                     } else {
                         $("#links").animate({
+                            width: 250
+                        }, 500);
+                        $(this).animate({
                             width: 250
                         }, 500);
                     }
