--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ and open the template in the editor.
                     }
                 });
                 
-                $('li[data-jstree=\'{"type":"file"}\']').on("click",function() {
+                $('li[data-jstree]').on("click",function() {
                     console.log("File click");
                 });
             });
