--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ and open the template in the editor.
 		});
 
                 $("#tabs > ul > li").on("click", function() {
+                    console.log("Tab click");
                     var name = $(this).find("span").text();
                     var content = $("textarea[filename='"+name+"']").val();
                     $("#tabs > ul > .active").removeClass("active");
