--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ and open the template in the editor.
                     var path = $("textarea[filename='"+name+"']").attr("path");
                     console.log(path);
                     console.log(editor.getValue());
+                    $("textarea[fiilename='"+name+"']").val(editor.getValue());
                     
                     $.ajax({
                        url: "http://ide.mykey.to:8080/index.hh",
