--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ and open the template in the editor.
                     
                     
                     $("#tabs > ul > li").click(function() {
-                        var name = $(this).find("span").text();
-                        var content = $("textarea[filename='"+name+"']").val();
+                        var name = $(this).find(".path").text();
+                        var content = $("textarea[path='"+name+"']").val();
                         $("#tabs > ul > .active").removeClass("active");
                         $(this).addClass("active");
                         editor.setValue(content);
