--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ and open the template in the editor.
                 }
                 
             $(function() {
-                editor = = ace.edit("editor");
+                editor = ace.edit("editor");
 		
                 //$("#tree").jstree();
                 $("#openProjectDialog").dialog({autoOpen: false, 
