--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ and open the template in the editor.
             <div id="footer"></div>
             <script src="src/ace.js"></script>
             <script>
+            editor = ace.edit("editor");
             editor.setTheme("ace/theme/twilight");
             editor.getSession().setMode("ace/mode/hhvm");
 
