--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ and open the template in the editor.
                             height: 250
                         }, 500);
                     }
+                    checkForChanges();
                 });
                 
                 $('li[data-jstree]').on("click",function() {
