--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ and open the template in the editor.
                             height: 50
                         }, 500);
                         $("#wrapper").animate({
-                            height: $("#wrapper").height()-50
+                            height: $("#wrapper").height()+250
                         }, 500);
                     } else {
                         $("#footer").animate({
