--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@ and open the template in the editor.
                 
                 $("#rechts > textarea").keyup(function(e) {
                     var code = (e.keyCode ? e.keyCode : e.which);
-                    if(code == 13) {
-                        console.log($(this).text());
+                    if(code === 13) {
+                        var message = $(this).val();
+                        $("#chatVerlauf").append("<span class='user'>Ich:</span><span class='text'>"+message+"</span><br>");
+                        $(this).text("");
                     }
                 });
             });
