--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@ and open the template in the editor.
                             width: 250
                         }, 500);
                     }
+                    $("#newMessageToken").remove();
+                });
+                
+                $("#chatVerlauf").click(function() {
+                    $("#newMessageToken").remove();
                 });
                 
                 $("#footerAnimation").click(function() {
