--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ and open the template in the editor.
                 
                 $("#chatVerlauf").height($("#rechts").height()-120);
 
-                function checkForChanges()
-                {
+                function checkForChanges() {
                     var tab_h = $("#tabs").height();
                     var wrapper_h = $("body").height();
                     $("#head").css("min-height",40 + tab_h);
